fixing carousel bug where all images are visible until a dot is clicked

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,3 +1,7 @@
+#slide2, #slide3 {
+    display: none;
+}
+
 .carousel-container {
     display: flex;
     flex-direction: row;
